# rsf_team_nav

./: .gitignore  .gitmodules  README.md  deployment.repos
rsf_bringup/: CMakeLists.txt  package.xml
rsf_bringup/config/: bringup_params.yaml
rsf_bringup/include/rsf_bringup/: tf_odom_to_footprint.hpp
rsf_bringup/launch/: rsf_bringup.launch.py
rsf_bringup/src/: tf_odom_to_footprint.cpp
rsf_description/: CMakeLists.txt  package.xml
rsf_description/launch/: display.launch.py
rsf_description/rviz/: description.rviz
rsf_description/urdf/: material_colors.xacro  orne_boxF.urdf.xacro
rsf_description/urdf/links/: base_link.urdf.xacro  caster_wheel_link.urdf.xacro  wheel_link.urdf.xacro
rsf_description/urdf/sensors/: rsf_x001.urdf.xacro
rsf_simulator/: CMakeLists.txt  package.xml
rsf_simulator/launch/: rsf_simulator.launch.py
rsf_simulator/models/orne_boxF/: model.config  orne_boxF.sdf
rsf_simulator/worlds/: tsudanuma2-3.sdf
