<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rsf_bringup</name>
  <version>0.0.1</version>
  <description>Bringup launch and configuration for the RSF robot</description>
  <maintainer email="teiruyamashita@icloud.com">kyo0221</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>icart_driver</exec_depend>
  <exec_depend>hokuyo_rsf</exec_depend>
  <exec_depend>rsf_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
