<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rsf_simulator</name>
  <version>0.1.0</version>
  <description>Ignition Gazebo Fortress simulator for orne_box with Hokuyo RSF-X001 sensor system</description>
  <maintainer email="teiruyamashita@icloud.com">Kyo Yamashita</maintainer>
  <author email="teiruyamashita@icloud.com">Kyo Yamashita</author>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
